[package]
name = "program-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
eros-marketplace-solana = { path = "../programs/eros-marketplace-solana", features = ["no-entrypoint", "test-without-bubblegum"] }
anchor-lang = "1.0"
# solana-program-test 3.x matches the installed Agave 3.1.15 runtime
solana-program-test = "3"
solana-sdk = "3"
tokio = { version = "1", features = ["rt", "macros"] }
borsh = "1"
ed25519-dalek = "2"
rand = "0.8"
# needed for ed25519 program ID constant in test helpers
solana-sdk-ids = "3"
# needed for mpl_bubblegum::ID in BubblegumPlaceholders
mpl-bubblegum = { version = "3.0.0", default-features = false }

[lib]
path = "src/lib.rs"
