[package]
name = "eros-marketplace-sale"
version = "0.1.0"
description = "Atomic on-chain settlement for eros-nft v1 cards"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "eros_marketplace_sale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# anchor-lang 1.0 bundles solana-program — no separate dep needed
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
# mpl-bubblegum 3.0.0 is the latest on crates.io as of 2026-05-10
mpl-bubblegum = { version = "3.0.0", default-features = false }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
