[package]
name = "eros-marketplace-solana"
version = "0.2.1-preaudit"
description = "Atomic on-chain settlement for eros-nft v1 cards"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "eros_marketplace_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# When active, the Bubblegum CPI block in execute_purchase is compiled out so
# that unit tests (which run on solana-program-test, not a full validator) can
# exercise the SOL-split and nonce-clearing logic without requiring real cNFT
# state on-chain.
test-without-bubblegum = []
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# anchor-lang 1.0 bundles solana-program — no separate dep needed
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
# mpl-bubblegum 3.0.0 is the latest on crates.io as of 2026-05-10
mpl-bubblegum = { version = "3.0.0", default-features = false }
# Solana 3.x disaggregated crates — needed for ed25519 introspection helper
# (anchor-lang 1.0's solana_program re-export does not expose these)
solana-instructions-sysvar = "3.0.0"
solana-sdk-ids = "3.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
# Anchor 1.0.x's #[program] / #[derive(Accounts)] macros emit
# `cfg(feature = "custom-heap" | "custom-panic" | "anchor-debug")` against
# features that the program crate does not declare. Declare them as expected
# so the macro expansion passes -D warnings (set by CI).
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
] }
